--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://kit.fontawesome.com/bb18af6ae6.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/bb18af6ae6.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Weather App</title>
   </head>
   <body>
